<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment"
    android:background="@color/black">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10sp"
                android:orientation="horizontal"
                android:id="@+id/fragment_settings_top_bar">
                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"/>
                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="45sp"
                    android:layout_weight="1"
                    android:src="@drawable/baseline_done_24"
                    android:background="@color/black"
                    android:id="@+id/fragment_settings_top_bar_save_button"
                    android:visibility="gone"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/LinearLayout_projectSettings_projectName"
                >
                <EditText
                    android:id="@+id/fragment_settings_project_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/projectColor"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:layout_marginTop="10sp"
                    android:text=""
                    android:backgroundTint="@color/projectColor"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/LinearLayout_projectSettingsCheckBoxesPanelSettings">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/projectSettingsCheckBoxes"
                    android:textAlignment="center"
                    android:textColor="@color/projectColor"
                    android:textSize="20sp"
                    android:layout_marginTop="10sp"
                    android:id="@+id/LinearLayout_projectSettingsCheckBoxesPanelSettings_label"
                    />
                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/projectSettingsCheckBoxes_Tasks"
                    android:textColor="@color/projectColor"
                    android:textSize="15sp"
                    android:id="@+id/settings_fragment_projectTasksFlag"
                    />
                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/projectSettingsCheckBoxes_Description"
                    android:textColor="@color/projectColor"
                    android:textSize="15sp"
                    android:id="@+id/settings_fragment_projectDescriptionFlag"
                    />
                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/projectSettingsCheckBoxes_Ideas"
                    android:textColor="@color/projectColor"
                    android:textSize="15sp"
                    android:id="@+id/settings_fragment_projectIdeasFlag"
                    />
                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/projectSettingsCheckBoxes_Script"
                    android:textColor="@color/projectColor"
                    android:textSize="15sp"
                    android:id="@+id/settings_fragment_projectScriptFlag"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>