<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/app_logo"
        android:textAlignment="center"
        android:textColor="@color/projectColor"
        android:textSize="30sp"
        android:layout_marginTop="10sp"
        android:visibility="gone"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activity_main_top_bar_panel"
        android:layout_marginTop="10sp"
        android:orientation="horizontal">
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"/>
        <ImageButton
            android:layout_width="45sp"
            android:layout_height="wrap_content"
            android:src="@drawable/settings_project_color"
            android:background="@color/black"
            android:id="@+id/activity_main_top_bar_panel_settings_button"
            />
    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchProjectTextField"
        android:layout_below="@+id/activity_main_top_bar_panel"
        android:layout_marginTop="5sp"
        android:layout_marginHorizontal="10sp"
        android:hint="@string/sarchProjectTextBoxHint"
        android:textColor="@color/projectColor"
        android:textColorHint="@color/hintColor"
        android:backgroundTint="@color/projectColor"/>
    <ScrollView
        android:id="@+id/contentScrolView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addProjectButton"
        android:layout_marginHorizontal="10sp"
        >
        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        <Button
            android:id="@+id/projectButtonExample"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/projectColor"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:layout_marginBottom="5sp"
            android:text=""
            />
        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="120sp"
        android:layout_height="50sp"
        android:id="@+id/addProjectButton"
        android:layout_marginHorizontal="10sp"
        android:layout_below="@+id/searchProjectTextField"
        android:backgroundTint="@color/projectColor"
        android:layout_marginBottom="0sp"
        android:text="@string/addProjectButton"
        android:textColor="@color/black"
        />
</RelativeLayout>
